fix overflowy footer

--- a/css/input.css
+++ b/css/input.css
@@ -14,6 +14,11 @@
     scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden; /* Disables horizontal scrolling */
+}
+
+
 body{
     font-family: "Inter", sans-serif;
 }
