--- a/css/output.css
+++ b/css/output.css
@@ -640,44 +640,12 @@ video {
   top: 6rem;
 }
 
-.top-6 {
-  top: 1.5rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-7 {
-  left: 1.75rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-7 {
-  top: 1.75rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
 .top-3 {
   top: 0.75rem;
 }
 
-.left-4 {
-  left: 1rem;
+.top-6 {
+  top: 1.5rem;
 }
 
 .z-20 {
@@ -692,10 +660,6 @@ video {
   z-index: 50;
 }
 
-.m-auto {
-  margin: auto;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -704,11 +668,6 @@ video {
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
-
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .mb-4 {
@@ -819,14 +778,6 @@ video {
   height: 100vh;
 }
 
-.h-\[380px\] {
-  height: 380px;
-}
-
-.h-\[320px\] {
-  height: 320px;
-}
-
 .w-3\.5 {
   width: 0.875rem;
 }
@@ -849,6 +800,10 @@ video {
 
 .w-\[20\%\] {
   width: 20%;
+}
+
+.w-\[200px\] {
+  width: 200px;
 }
 
 .w-\[30\%\] {
@@ -875,44 +830,16 @@ video {
   width: 85%;
 }
 
+.w-\[90\%\] {
+  width: 90%;
+}
+
 .w-full {
   width: 100%;
 }
 
 .w-screen {
   width: 100vw;
-}
-
-.w-80 {
-  width: 20rem;
-}
-
-.w-\[80\%\] {
-  width: 80%;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[380px\] {
-  width: 380px;
-}
-
-.w-\[320px\] {
-  width: 320px;
-}
-
-.w-\[280px\] {
-  width: 280px;
-}
-
-.w-\[200px\] {
-  width: 200px;
 }
 
 .min-w-\[40px\] {
@@ -1058,6 +985,10 @@ video {
   overflow-x: hidden;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-3xl {
   border-radius: 1.5rem;
 }
@@ -1076,18 +1007,6 @@ video {
 
 .rounded-sm {
   border-radius: 0.125rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .border {
@@ -1159,6 +1078,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-transparent {
   background-color: transparent;
 }
@@ -1166,26 +1090,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -1227,6 +1131,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-24 {
+  padding: 6rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
@@ -1239,12 +1147,18 @@ video {
   padding: 1.5rem;
 }
 
-.p-24 {
-  padding: 6rem;
-}
-
 .p-8 {
   padding: 2rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .px-2 {
@@ -1290,21 +1204,6 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.px-16 {
-  padding-left: 4rem;
-  padding-right: 4rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
 .text-left {
@@ -1424,9 +1323,19 @@ video {
   color: rgb(11 37 33 / var(--tw-text-opacity));
 }
 
+.text-\[\#0f332e\] {
+  --tw-text-opacity: 1;
+  color: rgb(15 51 46 / var(--tw-text-opacity));
+}
+
 .text-\[\#2079ff\] {
   --tw-text-opacity: 1;
   color: rgb(32 121 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#248170\] {
+  --tw-text-opacity: 1;
+  color: rgb(36 129 112 / var(--tw-text-opacity));
 }
 
 .text-\[\#3b3b3b\] {
@@ -1479,16 +1388,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#0f332e\] {
-  --tw-text-opacity: 1;
-  color: rgb(15 51 46 / var(--tw-text-opacity));
-}
-
-.text-\[\#248170\] {
-  --tw-text-opacity: 1;
-  color: rgb(36 129 112 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1577,7 +1476,9 @@ video {
   scroll-behavior: smooth;
 }
 
-body{
+body {
+  overflow-x: hidden;
+  /* Disables horizontal scrolling */
   font-family: "Inter", sans-serif;
 }
 
@@ -1709,10 +1610,6 @@ body{
     height: 50px;
   }
 
-  .md\:h-\[60px\] {
-    height: 60px;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -1749,6 +1646,10 @@ body{
     width: 40%;
   }
 
+  .md\:w-\[50px\] {
+    width: 50px;
+  }
+
   .md\:w-\[60\%\] {
     width: 60%;
   }
@@ -1763,14 +1664,6 @@ body{
 
   .md\:w-\[90\%\] {
     width: 90%;
-  }
-
-  .md\:w-\[50px\] {
-    width: 50px;
-  }
-
-  .md\:w-\[60px\] {
-    width: 60px;
   }
 
   .md\:min-w-\[50px\] {
